# rudis

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  sources.rs  utils.rs
src/bot/: data.rs  mod.rs  music.rs  queue.rs  sources.rs
src/bot/commands/: mod.rs  music.rs
