[package]
name = "rudis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
poise = "0.6.1"
serenity = { version = "0.12.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
    "utils",
    "chrono",
    "http",
    "cache",
] }
shuttle-runtime = "0.46.0"
shuttle-serenity = "0.46.0"
songbird = { version = "0.4.3", features = ["builtin-queue", "driver"] }
reqwest = { default-features = false, features = ["stream"], version = "0.11" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1.37"
rustls = { version = "0.23.4", default-features = false, features = ["std", "tls12", "ring"] }
